--- a/code_memo.html
+++ b/code_memo.html
@@ -74,5 +74,7 @@
     // 初期ロード時にリスト更新
     window.onload = updateList;
   </script>
+  <a href="https://github.com/OkHu-MC/Study-content-by-Okufuku">GitHubのリンク</a>
+  
 </body>
 </html>
