--- a/code_memo.html
+++ b/code_memo.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <h2>メモ帳（クリップボード履歴）</h2>
+  <h2>メモ帳（クリップボード履歴）</h2>  <a href="https://github.com/OkHu-MC/Study-content-by-Okufuku">GitHubのリンク</a>
   <p>tips:アズレンの装備コード置きとかにも使えるよ（というかメモ帳として使うならid=valueのinputタグはtextareaにすべきである）</p>
   <input type="text" id="key" placeholder="キー（名前）">
   <input type="text" id="value" placeholder="値">
@@ -74,7 +74,7 @@
     // 初期ロード時にリスト更新
     window.onload = updateList;
   </script>
-  <a href="https://github.com/OkHu-MC/Study-content-by-Okufuku">GitHubのリンク</a>
+
   
 </body>
 </html>
